--- a/employee/templates/employee/employee_table.html
+++ b/employee/templates/employee/employee_table.html
@@ -22,7 +22,8 @@
 <body>
     <div class="container mt-5">
         <h2 style="text-align:center;">Employee List</h2>
-
+        <h2>Welcome, {{ request.user.username }}!</h2>
+        <a href="{% url 'logout' %}">Logout</a>
         <table>
             <thead>
                 <tr>
